# wed

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/text/: CMakeLists.txt  buffer.cpp  ops.cpp
libs/text/include/: buffer.hpp  editor.hpp  ops.hpp  span.hpp  view.hpp  window.hpp
libs/text/tests/: CMakeLists.txt  lib_text_buffer.cpp  lib_text_ops.cpp
src/: main.cpp
